--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Vue app</title>
+    <link rel="stylesheet" href="src/main.css">
   </head>
   <body>
     <div id="app"></div>
